--- a/estilos/styles_sobrenos.css
+++ b/estilos/styles_sobrenos.css
@@ -46,6 +46,7 @@ h2 {
 .mebros-equipe {
     flex: 1 1 20%;
     text-align: center;
+
 }
 
 .mebros-equipe img {
@@ -97,23 +98,40 @@ h2 {
 
 /* Seção FAQ */
 .faq {
-    margin: 40px;
+    margin: 40px 0;
+
 }
 
 .faq h2 {
     margin-bottom: 20px;
 }
 
-.faq ul {
-    list-style-type: none;
-    padding: 0;
+details {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    padding: 10px;
+    transition: all 0.4s ease;
 }
 
-.faq ul li {
-    margin-bottom: 15px;
+details[open] {
+    background-color: #f9f9f9;
 }
 
-.faq ul li p {
-    margin: 5px 0;
+summary {
     font-weight: bold;
+    cursor: pointer;
+    outline: none;
+    transition: color 0.4s ease;
+}
+
+summary:hover {
+    color: #007bff;
+}
+
+details p {
+    margin: 10px 0 0 0;
+    padding: 10px 0 0 0;
+    border-top: 1px solid #ddd;
 }
