--- a/estilos/styles_sobrenos.css
+++ b/estilos/styles_sobrenos.css
@@ -1,3 +1,39 @@
+/* HEADER */
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(114, 117, 136);
+    padding: 10px;
+}
+
+header img {
+    width: 201px;
+    height: 72px;
+    margin-left: 8px;
+}
+
+header ul {
+    display: flex;
+    list-style-type: none;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    text-indent: 25px;
+}
+
+header ul li {
+    margin: 0 8px;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    color: #fe6666;
+}
+
+header ul li :hover {
+    color: #ffffff;
+}
+
 /* Estilizações globais */
 body {
     font-family: Arial, sans-serif;
